Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Public/Generate/Export/AActor.h

	DOTNET_EXPORT auto E_AActor_AllowReceiveTickEventOnDedicatedServer(AActor* Self)
	{
		return Self->AllowReceiveTickEventOnDedicatedServer();
	}
	DOTNET_EXPORT auto E_AActor_ApplyWorldOffset(AActor* Self, INT_PTR InOffset, bool bWorldShift)
	{
		auto& _p0 = *(FVector*)InOffset;
		auto _p1 = bWorldShift;
		Self->ApplyWorldOffset(_p0, _p1);
	}
	DOTNET_EXPORT auto E_AActor_CopyRemoteRoleFrom(AActor* Self, AActor* CopyFromActor)
	{
		auto _p0 = CopyFromActor;
		Self->CopyRemoteRoleFrom(_p0);
	}
	DOTNET_EXPORT auto E_AActor_Destroy(AActor* Self, bool bNetForce, bool bShouldModifyLevel)
	{
		auto _p0 = bNetForce;
		auto _p1 = bShouldModifyLevel;
		return Self->Destroy(_p0, _p1);
	}
	DOTNET_EXPORT auto E_AActor_GetActorBounds(AActor* Self, bool bOnlyCollidingComponents, INT_PTR Origin, INT_PTR BoxExtent)
	{
		auto _p0 = bOnlyCollidingComponents;
		auto& _p1 = *(FVector*)Origin;
		auto& _p2 = *(FVector*)BoxExtent;
		Self->GetActorBounds(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_AActor_GetActorQuat(AActor* Self)
	{
		return (INT_PTR) new FQuat(Self->GetActorQuat());
	}
	DOTNET_EXPORT auto E_AActor_GetActorTimeDilation(AActor* Self)
	{
		return Self->GetActorTimeDilation();
	}
	DOTNET_EXPORT auto E_AActor_GetDistanceTo(AActor* Self, AActor* OtherActor)
	{
		auto _p0 = OtherActor;
		return Self->GetDistanceTo(_p0);
	}
	DOTNET_EXPORT auto E_AActor_GetGameTimeSinceCreation(AActor* Self)
	{
		return Self->GetGameTimeSinceCreation();
	}
	DOTNET_EXPORT auto E_AActor_GetOwner(AActor* Self)
	{
		return ConvertToManage_ObjectPointerDescription(Self->GetOwner());
	}
	DOTNET_EXPORT auto E_AActor_GetTickableWhenPaused(AActor* Self)
	{
		return Self->GetTickableWhenPaused();
	}
	DOTNET_EXPORT auto E_AActor_GetTransform(AActor* Self)
	{
		return (INT_PTR) new FTransform(Self->GetTransform());
	}
	DOTNET_EXPORT auto E_AActor_IncrementalRegisterComponents(AActor* Self, int32 NumComponentsToRegister)
	{
		auto _p0 = NumComponentsToRegister;
		return Self->IncrementalRegisterComponents(_p0);
	}
	DOTNET_EXPORT auto E_AActor_IsOwnedBy(AActor* Self, AActor* TestOwner)
	{
		auto _p0 = TestOwner;
		return Self->IsOwnedBy(_p0);
	}
	DOTNET_EXPORT auto E_AActor_IsRelevancyOwnerFor(AActor* Self, AActor* ReplicatedActor, AActor* ActorOwner, AActor* ConnectionActor)
	{
		auto _p0 = ReplicatedActor;
		auto _p1 = ActorOwner;
		auto _p2 = ConnectionActor;
		return Self->IsRelevancyOwnerFor(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_AActor_IsReplayRelevantFor(AActor* Self, AActor* RealViewer, AActor* ViewTarget, INT_PTR SrcLocation, float CullDistanceSquared)
	{
		auto _p0 = RealViewer;
		auto _p1 = ViewTarget;
		auto& _p2 = *(FVector*)SrcLocation;
		auto _p3 = CullDistanceSquared;
		return Self->IsReplayRelevantFor(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_AActor_K2_GetActorLocation(AActor* Self)
	{
		return (INT_PTR) new FVector(Self->K2_GetActorLocation());
	}
	DOTNET_EXPORT auto E_AActor_K2_GetActorRotation(AActor* Self)
	{
		return (INT_PTR) new FRotator(Self->K2_GetActorRotation());
	}
	DOTNET_EXPORT auto E_AActor_K2_SetActorRotation(AActor* Self, INT_PTR NewRotation, bool bTeleportPhysics)
	{
		auto _p0 = *(FRotator*)NewRotation;
		auto _p1 = bTeleportPhysics;
		return Self->K2_SetActorRotation(_p0, _p1);
	}
	DOTNET_EXPORT auto E_AActor_K2_TeleportTo(AActor* Self, INT_PTR DestLocation, INT_PTR DestRotation)
	{
		auto _p0 = *(FVector*)DestLocation;
		auto _p1 = *(FRotator*)DestRotation;
		return Self->K2_TeleportTo(_p0, _p1);
	}
	DOTNET_EXPORT auto E_AActor_OnConstruction(AActor* Self, INT_PTR Transform)
	{
		auto& _p0 = *(FTransform*)Transform;
		Self->OnConstruction(_p0);
	}
	DOTNET_EXPORT auto E_AActor_OnRep_ReplicateMovement(AActor* Self)
	{
		Self->OnRep_ReplicateMovement();
	}
	DOTNET_EXPORT auto E_AActor_OnSubobjectCreatedFromReplication(AActor* Self, UObject* NewSubobject)
	{
		auto _p0 = NewSubobject;
		Self->OnSubobjectCreatedFromReplication(_p0);
	}
	DOTNET_EXPORT auto E_AActor_PostNetReceiveVelocity(AActor* Self, INT_PTR NewVelocity)
	{
		auto& _p0 = *(FVector*)NewVelocity;
		Self->PostNetReceiveVelocity(_p0);
	}
	DOTNET_EXPORT auto E_AActor_ReceiveTick(AActor* Self, float DeltaSeconds)
	{
		auto _p0 = DeltaSeconds;
		Self->ReceiveTick(_p0);
	}
	DOTNET_EXPORT auto E_AActor_RegisterAllActorTickFunctions(AActor* Self, bool bRegister, bool bDoComponents)
	{
		auto _p0 = bRegister;
		auto _p1 = bDoComponents;
		Self->RegisterAllActorTickFunctions(_p0, _p1);
	}
	DOTNET_EXPORT auto E_AActor_SetActorScale3D(AActor* Self, INT_PTR NewScale3D)
	{
		auto _p0 = *(FVector*)NewScale3D;
		Self->SetActorScale3D(_p0);
	}
	DOTNET_EXPORT auto E_AActor_SetAutonomousProxy(AActor* Self, bool bInAutonomousProxy, bool bAllowForcePropertyCompare)
	{
		auto _p0 = bInAutonomousProxy;
		auto _p1 = bAllowForcePropertyCompare;
		Self->SetAutonomousProxy(_p0, _p1);
	}
	DOTNET_EXPORT auto E_AActor_SetReplicates(AActor* Self, bool bInReplicates)
	{
		auto _p0 = bInReplicates;
		Self->SetReplicates(_p0);
	}
	DOTNET_EXPORT auto E_AActor_TeleportTo(AActor* Self, INT_PTR DestLocation, INT_PTR DestRotation, bool bIsATest, bool bNoCheck)
	{
		auto& _p0 = *(FVector*)DestLocation;
		auto& _p1 = *(FRotator*)DestRotation;
		auto _p2 = bIsATest;
		auto _p3 = bNoCheck;
		return Self->TeleportTo(_p0, _p1, _p2, _p3);
	}